prover-ray/zkcdriver/testdata/synced/invalid/bitwise_08.zkc
//error:3:7-9:expected type u4
fn f(x:u8) -> (r:u4) {
  r = ~x
  return
}
